[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Dialogue.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Borders.gd" type="Script" id=2]
[ext_resource path="res://Scripts/name.gd" type="Script" id=3]
[ext_resource path="res://Scripts/says.gd" type="Script" id=4]

[node name="Dialogue" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
textTime = 0.05

[node name="background" type="Polygon2D" parent="."]
color = Color( 0.968627, 0.933333, 1, 1 )
polygon = PoolVector2Array( 0, 0, 0, 560, 800, 560, 800, 0 )

[node name="Borders" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
border_scale = 0.6
borderTimer = 0.5

[node name="topBorder" type="Polygon2D" parent="Borders"]
scale = Vector2( 1, 0.6 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 0, 0, 800, 0, 800, 100, 0, 100 )

[node name="bottomBorder" type="Polygon2D" parent="Borders"]
position = Vector2( 0, 500 )
scale = Vector2( 1, 0.6 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 0, 0, 800, 0, 800, 100, 0, 100 )

[node name="borderTime" type="Timer" parent="Borders"]
wait_time = 0.3
one_shot = true
autostart = true

[node name="name" type="Control" parent="."]
margin_left = 60.0
margin_top = -60.0
margin_right = 100.0
margin_bottom = -20.0
script = ExtResource( 3 )

[node name="nameBack" type="Polygon2D" parent="name"]
position = Vector2( 0, 360 )
scale = Vector2( 0.666667, 0.666667 )
color = Color( 0.176471, 0.176471, 0.219608, 0.466667 )
polygon = PoolVector2Array( 0, 0, 0, 60, 120, 60, 120, 0, 60, 0 )

[node name="nameBox" type="Label" parent="name"]
margin_left = 10.0
margin_top = 360.0
margin_right = 80.0
margin_bottom = 400.0
text = "name:"
valign = 1

[node name="says" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="saysBack" type="Polygon2D" parent="says"]
position = Vector2( 60, 360 )
scale = Vector2( 5.29167, 1 )
color = Color( 0.176471, 0.176471, 0.219608, 0.47451 )
polygon = PoolVector2Array( 0, 0, 0, 60, 120, 60, 120, 0, 60, 0 )

[node name="saysBox" type="Label" parent="says"]
margin_left = 65.0
margin_top = 365.0
margin_right = 695.0
margin_bottom = 415.0
text = "name:"
autowrap = true

[node name="letterTimer" type="Timer" parent="says"]
wait_time = 0.2
autostart = true

[node name="Button" type="Button" parent="."]
margin_left = 720.0
margin_top = 365.0
margin_right = 760.0
margin_bottom = 405.0
text = "->"
[connection signal="timeout" from="says/letterTimer" to="says" method="_on_letterTimer_timeout"]
[connection signal="pressed" from="Button" to="name" method="_on_Button_pressed"]
[connection signal="pressed" from="Button" to="says" method="_on_Button_pressed"]
